# python-clean-code-en

./: requirements.txt
content/Notebooks/CodeAlong/clean-code/: 01 What is Clean Code.ipynb  02 Clean Code Names.ipynb  03 Clean Code Functions.ipynb  04 Clean Code Comments and Documentation.ipynb  06 Clean Code Error Handling.ipynb  07 Introduction to Error Handling.ipynb  08 Exceptions.ipynb  09 Handling errors.ipynb  11 Cleaning up with Finally.ipynb  12 Assertions.ipynb
content/Notebooks/CodeAlong/design-patterns/: 01 Design Patterns.ipynb  03 Gang-of-Four Patterns.ipynb  04 Observer.ipynb  05 Composite.ipynb  06 Workshop RPG-Dice.ipynb  07 Strategy.ipynb  08 Zustand.ipynb  09 Factory Method.ipynb
content/Notebooks/CodeAlong/grasp/: 01 Responsibility-Driven Design (RDD).ipynb  02 GRASP Case Study Adventure Game.ipynb  04 Analysis Models.ipynb  06 GRASP Creator.ipynb  07 GRASP Information Expert.ipynb  08 GRASP Low Coupling.ipynb  09 GRASP Controller.ipynb  11 GRASP Polymorphism.ipynb  12 GRASP Pure Fabrication.ipynb  14 GRASP Protected Variation.ipynb  15 GRASP Case Study Monopoly.ipynb
content/Notebooks/CodeAlong/modules_and_packages/: 01 User-defined Modules.ipynb  02 Packages.ipynb
content/Notebooks/CodeAlong/oop/: 01 Conversion to Strings.ipynb  02 Types vs Instances.ipynb  (+15 more)
content/examples/Employee/: README.md  setup.cfg
content/examples/Employee/src/employee/: augurdb.py  employee_client.py
content/examples/Employee/src/employee/initial/: __main__.py  employee.py  employee_type.py
content/examples/Employee/src/employee/v1/: __main__.py  employee.py  project.py
content/examples/Employee/tests/: main_test.py
content/examples/EmployeeStarterKit/: README.md  setup.cfg
content/examples/FizzBuzz/: README.md  setup.cfg
content/examples/FizzBuzzStarterKit/: README.md  setup.cfg
content/examples/FizzBuzzStarterKit/src/fizzbuzz_sk/: __main__.py  fizzbuzz.py
content/examples/FizzBuzzStarterKit/tests/: main_test.py
content/examples/Monopoly/: README.md  setup.cfg  tox.ini
content/examples/RpgDice/: RPG Dice.ipynb
content/examples/RpgDiceStarterKit/: RPG Dice Starter Kit.ipynb
content/examples/ShoppingListPytestSK/: tox.ini
content/examples/SimplePackaging/: README.md  setup.cfg
content/examples/SimplePackaging/src/simple_packaging/: __main__.py
content/examples/SimplePackaging/tests/: main_test.py
(+147 files in other folders)
