[metadata]
name = simple_packaging
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = A simple example for an installable package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer/simple_packaging
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/simple_packaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    simple-packaging = simple_packaging.__main__:main